--- a/helm-charts/logstash/values.yaml
+++ b/helm-charts/logstash/values.yaml
@@ -8,7 +8,7 @@ nameOverride: logstash
 logstash:
   replicaCount: 2
   image:
-    repository: elkimages.azurecr.io/logstash
+    repository: elkacr.azurecr.io/logstash
     tag: 1.0.0
     pullPolicy: Always
   service:
