--- a/helm-charts/es/Chart.yaml
+++ b/helm-charts/es/Chart.yaml
@@ -3,6 +3,6 @@ description: helm chart for elasticSearch
 name: elasticsearch
 version: 0.0.1
 maintainers:
-  - name:
-    email:
+  - name: Yawei Wang
+    email: yaweiw@microsoft.com
 engine: gotpl
