--- a/helm-charts/kibana/Chart.yaml
+++ b/helm-charts/kibana/Chart.yaml
@@ -2,3 +2,6 @@ apiVersion: v1
 description: helm chart for kibana
 name: kibana
 version: 0.0.1
+maintainers:
+  - name: Yawei Wang
+    email: yaweiw@microsoft.com
