--- a/helm-charts/logstash/Chart.yaml
+++ b/helm-charts/logstash/Chart.yaml
@@ -2,3 +2,6 @@ apiVersion: v1
 description: helm chart for logstash
 name: logstash
 version: 0.0.1
+maintainers:
+  - name: Yawei Wang
+    email: yaweiw@microsoft.com
