Custom registry, Storage account sku. (#10)
Several features introduced:
1. ARM templates refactored into several components. Future updates will be easier.
2. Add support for selection of Storage Account sku. Also, user can choose SSD-supported virtual machines.
3. User can provide custom registry URL to save money and provision time.
4. Named argument is used in shell scripts for better readability.
5. Repository URL is provided by param.json and UiDefinition.json which is easier for diagnostic.
5. Some bugs fixed.

--- a/helm-charts/config.yaml
+++ b/helm-charts/config.yaml
@@ -1,11 +1,11 @@
 common:
-  namespace: elk-cluster-ns
+  namespace: ${NAMESPACE}
   secretName: azure-registry
   registry: ${REGISTRY_URL}
 
 elasticsearch:
   image:
-    tag: 1.0.0
+    tag: ${TAG}
   client:
     replicas: 2
   master:
@@ -14,13 +14,17 @@ elasticsearch:
     replicas: 2
     storageAccount: ${STORAGE_ACCOUNT}
     location: ${STORAGE_LOCATION}
+    storageSku: ${STORAGE_SKU}
 
 kibana:
   image:
-    tag: 1.0.0
+    tag: ${TAG}
   replicaCount: 1
+  env:
+    USERNAME: ${USERNAME}
+    PASSWORD: ${PASSWORD}
 
 logstash:
   image:
-    tag: 1.0.0
+    tag: ${TAG}
   replicaCount: 1
