--- a/helm-charts/es/templates/az-storageclass.yaml
+++ b/helm-charts/es/templates/az-storageclass.yaml
@@ -2,10 +2,10 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
-  name: slow
+  name: data
   namespace: {{ .Values.common.namespace }}
 provisioner: kubernetes.io/azure-disk
 parameters:
-  skuName: Standard_LRS
+  skuName: {{ .Values.elasticsearch.data.storageSku }}
   location: {{ .Values.elasticsearch.data.location }}
   storageAccount: {{ .Values.elasticsearch.data.storageAccount }}
