--- a/config/nginx-basic.conf
+++ b/config/nginx-basic.conf
@@ -12,7 +12,7 @@ http {
                 location / {
                         proxy_pass http://localhost:8080;
                         auth_basic "Restrict Access";
-                        auth_basic_user_file /etc/nginx/.htpasswd;
+                        auth_basic_user_file /usr/local/openresty/nginx/conf/.htpasswd;
                 }
         }
 }
