change to ls dockerfile

--- a/docker/logstash/Dockerfile
+++ b/docker/logstash/Dockerfile
@@ -37,6 +37,13 @@ ARG DIAG_EVT_HUB_KEY_NAME=undefined
 ARG DIAG_EVT_HUB_ACC_KEY=undefined
 ARG DIAG_EVT_HUB_ENT_PATH=undefined
 ARG DIAG_EVT_HUB_PART=undefined
+
+ENV ENV_DIAG_EVT_HUB_NS ${DIAG_EVT_HUB_NS}
+ENV ENV_DIAG_EVT_HUB_KEY_NAME ${DIAG_EVT_HUB_KEY_NAME}
+ENV ENV_DIAG_EVT_HUB_ACC_KEY ${DIAG_EVT_HUB_ACC_KEY}
+ENV ENV_DIAG_EVT_HUB_ENT_PATH ${DIAG_EVT_HUB_ENT_PATH}
+ENV ENV_DIAG_EVT_HUB_PART ${DIAG_EVT_HUB_PART}
+
 ENV ELASTICSEARCH_URL "http://elasticsearch:9200"
 
-CMD /run.sh -n ${DIAG_EVT_HUB_NS} -a ${DIAG_EVT_HUB_KEY_NAME} -k ${DIAG_EVT_HUB_ACC_KEY} -e ${DIAG_EVT_HUB_ENT_PATH} -p ${DIAG_EVT_HUB_PART} -i ${ELASTICSEARCH_URL}
+CMD /run.sh -n ${ENV_DIAG_EVT_HUB_NS} -a ${ENV_DIAG_EVT_HUB_KEY_NAME} -k ${ENV_DIAG_EVT_HUB_ACC_KEY} -e ${ENV_DIAG_EVT_HUB_ENT_PATH} -p ${ENV_DIAG_EVT_HUB_PART} -i ${ELASTICSEARCH_URL}
