--- a/helm-charts/filebeat/values.yaml
+++ b/helm-charts/filebeat/values.yaml
@@ -9,6 +9,6 @@ nameOverride: filebeat
 filebeat:
   image:
     tag: 1.0.0
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   service:
     name: filebeat
