--- a/helm-charts/kibana/values.yaml
+++ b/helm-charts/kibana/values.yaml
@@ -10,7 +10,7 @@ kibana:
   replicaCount: 2
   image:
     tag: 1.0.0
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   service:
     name: kibana
     type: LoadBalancer
