--- a/docker/logstash/Dockerfile
+++ b/docker/logstash/Dockerfile
@@ -36,7 +36,7 @@ ARG DIAG_EVT_HUB_NS=undefined
 ARG DIAG_EVT_HUB_KEY_NAME=undefined
 ARG DIAG_EVT_HUB_ACC_KEY=undefined
 ARG DIAG_EVT_HUB_ENT_PATH=undefined
-ARG DIAG_EVT_HUB_PART=undefined
+ARG DIAG_EVT_HUB_PART=4
 
 ENV EVT_HUB_NS ${DIAG_EVT_HUB_NS}
 ENV EVT_HUB_KEY_NAME ${DIAG_EVT_HUB_KEY_NAME}
