--- a/docker/logstash/Dockerfile
+++ b/docker/logstash/Dockerfile
@@ -41,7 +41,7 @@ ARG DIAG_EVT_HUB_PART=4
 ENV EVT_HUB_NS ${DIAG_EVT_HUB_NS}
 ENV EVT_HUB_KEY_NAME ${DIAG_EVT_HUB_KEY_NAME}
 ENV EVT_HUB_ACC_KEY ${DIAG_EVT_HUB_ACC_KEY}
-ENV EVT_HUB_ENT_PATH "${DIAG_EVT_HUB_ENT_PATH}"
+ENV EVT_HUB_ENT_PATH ${DIAG_EVT_HUB_ENT_PATH}
 ENV EVT_HUB_PART ${DIAG_EVT_HUB_PART}
 
 ENV ELASTICSEARCH_URL "http://elasticsearch:9200"
