--- a/docker/elasticsearch/config/elasticsearch.yml
+++ b/docker/elasticsearch/config/elasticsearch.yml
@@ -6,8 +6,11 @@ node:
   name: ${NODE_NAME}
   data: ${NODE_DATA}
   ingest: ${NODE_INGEST}
-  
+
 network.host: ${NETWORK_HOST}
+
+indices.breaker.fielddata.limit: 85%
+indices.fielddata.cache.size:  75%
 
 path:
   data: /data/data
