add thread wait time option

--- a/docker/logstash/Dockerfile
+++ b/docker/logstash/Dockerfile
@@ -37,12 +37,14 @@ ARG DIAG_EVT_HUB_KEY_NAME=undefined
 ARG DIAG_EVT_HUB_ACC_KEY=undefined
 ARG DIAG_EVT_HUB_ENT_PATH=undefined
 ARG DIAG_EVT_HUB_PART=4
+ARG DIAG_EVT_HUB_THR_WAIT=1
 
 ENV EVT_HUB_NS ${DIAG_EVT_HUB_NS}
 ENV EVT_HUB_KEY_NAME ${DIAG_EVT_HUB_KEY_NAME}
 ENV EVT_HUB_ACC_KEY ${DIAG_EVT_HUB_ACC_KEY}
 ENV EVT_HUB_ENT_PATH ${DIAG_EVT_HUB_ENT_PATH}
 ENV EVT_HUB_PART ${DIAG_EVT_HUB_PART}
+ENV EVT_HUB_THR_WAIT ${DIAG_EVT_HUB_THR_WAIT}
 
 ENV ELASTICSEARCH_URL "http://elasticsearch:9200"
 
