--- a/helm-charts/es/templates/es-data-statefulset.yaml
+++ b/helm-charts/es/templates/es-data-statefulset.yaml
@@ -74,4 +74,4 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 10Gi #todo
+          storage: 50Gi
