--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ deploy:
   provider: releases
   api_key: ${github_token}
   file: "elk-${deploy_tag}.zip"
+  skip_cleanup: true
   on:
     branch: release
