--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
   - export deploy_tag="$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)"
 script:
   - git tag ${deploy_tag}
-  - zip solution config docker helm-charts
-  - zip "elk-${deploy_tag}" solution.zip scripts ARM-template createUiDefinition.json mainTemplate.json
+  - zip solution -r config -r docker -r helm-charts
+  - zip "elk-${deploy_tag}" solution.zip -r scripts -r ARM-template createUiDefinition.json mainTemplate.json
 deploy:
   provider: releases
   api_key: ${github_token}
